Bug#32059 thread_id is a long rather than ulong

thread_id should be defined as a dword (32 bit unsigned).